# poetry-version-increment-hook

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.toml
poetry_version_increment_hook/: git_utils.py  main.py  toml_utils.py  version.py
tests/: test_toml_tuils.py  test_version.py
